# docs/swagger.json
@@ -97,7 +97,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/github_com_abuamar142_auth-service_internal_models.CreateAPIKeyRequest"
                         }
                     }
                 ],
@@ -195,7 +195,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/github_com_abuamar142_auth-service_internal_models.LoginRequest"
                         }
                     }
                 ],
@@ -246,7 +246,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/github_com_abuamar142_auth-service_internal_models.LogoutRequest"
                         }
                     }
                 ],
@@ -323,7 +323,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/github_com_abuamar142_auth-service_internal_models.RefreshRequest"
                         }
                     }
                 ],
@@ -369,7 +369,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/github_com_abuamar142_auth-service_internal_models.RegisterRequest"
                         }
                     }
                 ],
@@ -397,6 +397,71 @@
         }
     },
     "definitions": {
+        "github_com_abuamar142_auth-service_internal_models.CreateAPIKeyRequest": {
+            "type": "object",
+            "properties": {
+                "expires_in": {
+                    "type": "string",
+                    "example": "90d"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "portfolio-backend"
+                }
+            }
+        },
+        "github_com_abuamar142_auth-service_internal_models.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "identifier": {
+                    "type": "string",
+                    "example": "test@example.com"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "secretpass123"
+                }
+            }
+        },
+        "github_com_abuamar142_auth-service_internal_models.LogoutRequest": {
+            "type": "object",
+            "properties": {
+                "refresh_token": {
+                    "type": "string",
+                    "example": "e1d2a3b4c5f6a7b8c9d0e1f2a3b4c5d6a7b8c9d0e1f2a3b4c5d6a7b8c9d0e1f2"
+                }
+            }
+        },
+        "github_com_abuamar142_auth-service_internal_models.RefreshRequest": {
+            "type": "object",
+            "properties": {
+                "refresh_token": {
+                    "type": "string",
+                    "example": "e1d2a3b4c5f6a7b8c9d0e1f2a3b4c5d6a7b8c9d0e1f2a3b4c5d6a7b8c9d0e1f2"
+                }
+            }
+        },
+        "github_com_abuamar142_auth-service_internal_models.RegisterRequest": {
+            "type": "object",
+            "properties": {
+                "display_name": {
+                    "type": "string",
+                    "example": "John Doe"
+                },
+                "email": {
+                    "type": "string",
+                    "example": "test@example.com"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "secretpass123"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "johndoe"
+                }
+            }
+        },
         "internal_handlers.ErrorBody": {
             "type": "object",
             "properties": {
